Update title and content for Handpose integration

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visual 3D Bangun Ruang - Hand Tracking (Final Optimized)</title>
+  <title>Visual 3D Bangun Ruang - Handpose TensorFlow.js</title>
   <style>
     body { margin:0; font-family:Arial,sans-serif; background:#e8f5e9; color:#333; }
     header { background:#1b5e20; color:#fff; padding:20px; text-align:center; box-shadow:0 4px 20px rgba(0,0,0,0.3); }
@@ -30,15 +30,15 @@
 <body>
 <header>
   <img src="https://upload.wikimedia.org/wikipedia/id/1/1f/Logo_IKIP_Siliwangi.png" alt="IKIP Siliwangi" class="logo">
-  <h1>PENGEMBANGAN VISUAL 3D INTERAKTIF DENGAN HAND TRACKING</h1>
-  <p class="subtitle">Pendekatan Saintifik Berbantuan Computer Vision pada Materi Bangun Ruang Sisi Datar</p>
+  <h1>PENGEMBANGAN VISUAL 3D INTERAKTIF DENGAN HANDPOSE</h1>
+  <p class="subtitle">Pendekatan Saintifik Berbantuan TensorFlow.js pada Materi Bangun Ruang Sisi Datar</p>
   <div class="author">Bintang Ramadhan — 23510048 — IKIP Siliwangi 2025/2026</div>
 </header>
 
 <div id="container"></div>
 
 <canvas id="debugCanvas" width="320" height="240"></canvas>
-<div id="handStatus">Hand Tracking: Klik tombol → izinkan kamera → gunakan pose yang berhasil di demo resmi (telapak penuh menghadap kamera, jari terentang lebar, ruangan terang)</div>
+<div id="handStatus">Handpose: Klik tombol → izinkan kamera → gerakkan tangan telapak terbuka (jarak 30–60 cm, ruangan terang)</div>
 
 <div class="controls">
   <button class="btn active" data-shape="kubus">Kubus</button>
@@ -68,10 +68,10 @@
   <div class="saintifik">
     <h3>Pendekatan Saintifik (5M)</h3>
     <ol>
-      <li><strong>Mengamati</strong>: Gerakkan tangan seperti di demo resmi, amati garis hijau di kotak merah</li>
-      <li><strong>Menanya</strong>: Apa yang membuat deteksi berhasil di demo resmi?</li>
+      <li><strong>Mengamati</strong>: Gerakkan tangan, amati titik hijau di kotak merah</li>
+      <li><strong>Menanya</strong>: Mengapa pinch bisa kontrol objek 3D?</li>
       <li><strong>Mengumpulkan Informasi</strong>: Hitung sisi, rusuk, sudut sambil interaksi</li>
-      <li><strong>Mengasosiasi</strong>: Hubungkan gestur dengan konsep ruang 3D</li>
+      <li><strong>Mengasosiasi</strong>: Hubungkan gestur dengan konsep ruang</li>
       <li><strong>Mengomunikasikan</strong>: Jelaskan pengalamanmu</li>
     </ol>
   </div>
@@ -80,13 +80,13 @@
     <p><em>Tuliskan penjelasan (minimal 3 kalimat):</em></p>
     <details><summary>Contoh</summary>
       <p style="background:#fff;padding:15px;border:1px solid #ddd;margin-top:10px;">
-        Dengan hand tracking, saya bisa menggerakkan model kubus menggunakan gerakan tangan. Saat pinch jari, objek berpindah sesuai posisi telapak tangan. Fitur ini membuat pembelajaran bangun ruang lebih interaktif dan mudah dipahami siswa SMP.
+        Dengan handpose, saya bisa menggerakkan model kubus menggunakan tangan. Pinch jari memungkinkan kontrol posisi dan rotasi. Fitur ini membantu memahami bangun ruang secara langsung dan interaktif.
       </p>
     </details>
   </div>
 </div>
 
-<footer>© 2025/2026 Bintang Ramadhan — Skripsi Pendidikan Matematika IKIP Siliwangi | Versi terbaru MediaPipe</footer>
+<footer>© 2025/2026 Bintang Ramadhan — Skripsi Pendidikan Matematika IKIP Siliwangi | Menggunakan TensorFlow.js Handpose</footer>
 
 <video id="webcam" autoplay playsinline style="display:none;"></video>
 
@@ -103,7 +103,9 @@
   import * as THREE from 'three';
   import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
-  const { HandLandmarker, FilesetResolver, DrawingUtils } = await import('https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@latest');
+  // TensorFlow.js & Handpose
+  const tf = await import('https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest');
+  const handpose = await import('https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose@latest');
 
   const container = document.getElementById('container');
   const video = document.getElementById('webcam');
@@ -116,13 +118,10 @@
   let isWireframe = false;
   let showLabels = true;
   let labels = [];
-  let handLandmarker;
+  let handposeModel;
   let handTrackActive = false;
-  let lastVideoTime = -1;
-  let isGrabbing = false;
   let lastDetectionTime = 0;
   let previewLoopId = null;
-  let drawingUtils;
 
   async function init() {
     scene = new THREE.Scene();
@@ -154,27 +153,17 @@
     floor.receiveShadow = true;
     scene.add(floor);
 
+    // Load Handpose model
+    try {
+      handposeModel = await handpose.load();
+      console.log("Handpose model loaded successfully");
+      handStatus.textContent = "Model Handpose siap! Klik tombol untuk mulai";
+    } catch (err) {
+      console.error("Gagal load Handpose model:", err);
+      handStatus.textContent = "Gagal memuat model Handpose. Cek koneksi internet.";
+    }
+
     animate();
-  }
-
-  async function createHandLandmarker() {
-    const filesetResolver = await FilesetResolver.forVisionTasks(
-      "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@latest/wasm"
-    );
-    handLandmarker = await HandLandmarker.createFromOptions(filesetResolver, {
-      baseOptions: {
-        modelAssetPath: `https://storage.googleapis.com/mediapipe-models/hand_landmarker/hand_landmarker/float16/1/hand_landmarker.task`,
-        delegate: "GPU"
-      },
-      runningMode: "VIDEO",
-      numHands: 1,
-      minHandDetectionConfidence: 0.5,
-      minHandPresenceConfidence: 0.5,
-      minTrackingConfidence: 0.5
-    });
-
-    drawingUtils = new DrawingUtils(debugCanvas.getContext('2d'));
-    console.log("HandLandmarker loaded - versi latest, resolusi lebih tinggi, tanpa flip");
   }
 
   function previewDraw() {
@@ -186,7 +175,6 @@
     const ctx = debugCanvas.getContext('2d');
 
     if (video.readyState >= 2) {
-      // Tanpa flip - frame normal
       ctx.drawImage(video, 0, 0, debugCanvas.width, debugCanvas.height);
     } else {
       ctx.fillStyle = '#333';
@@ -199,20 +187,62 @@
     previewLoopId = requestAnimationFrame(previewDraw);
   }
 
+  async function detectHand() {
+    if (!handposeModel || !handTrackActive || video.readyState < 2) return;
+
+    const predictions = await handposeModel.estimateHands(video);
+
+    const ctx = debugCanvas.getContext('2d');
+    ctx.drawImage(video, 0, 0, debugCanvas.width, debugCanvas.height);
+
+    if (predictions.length > 0) {
+      handStatus.textContent = "Tangan terdeteksi! Pinch jari untuk gerakkan bentuk";
+      console.log("Handpose detected:", predictions);
+
+      for (const prediction of predictions) {
+        const keypoints = prediction.landmarks;
+        for (const keypoint of keypoints) {
+          const [x, y] = keypoint;
+          ctx.beginPath();
+          ctx.arc(x * (debugCanvas.width / video.videoWidth), y * (debugCanvas.height / video.videoHeight), 5, 0, 2 * Math.PI);
+          ctx.fillStyle = '#00FF00';
+          ctx.fill();
+          ctx.strokeStyle = '#00FF00';
+          ctx.lineWidth = 2;
+          ctx.stroke();
+        }
+
+        // Pinch detection: distance between thumb tip (4) and index tip (8)
+        const thumbTip = keypoints[4];
+        const indexTip = keypoints[8];
+        const pinchDist = Math.hypot(thumbTip[0] - indexTip[0], thumbTip[1] - indexTip[1]);
+
+        isGrabbing = pinchDist < 35;  // adjust this number if too sensitive or not sensitive enough
+
+        if (isGrabbing && currentMesh) {
+          // Use wrist (0) for position control
+          const wrist = keypoints[0];
+          const x = (wrist[0] - video.videoWidth / 2) / (video.videoWidth / 2) * 15;
+          const y = (video.videoHeight / 2 - wrist[1]) / (video.videoHeight / 2) * 15;
+          const z = (pinchDist / 100) * -10; // closer pinch = move forward
+
+          currentMesh.position.set(x, y, z);
+        }
+      }
+    } else {
+      handStatus.textContent = "Tidak mendeteksi tangan - coba telapak terbuka lebar, terang, dekatkan tangan";
+    }
+  }
+
   function animate() {
     requestAnimationFrame(animate);
 
     const now = performance.now();
 
     if (handTrackActive && video.readyState >= video.HAVE_CURRENT_DATA) {
-      if (now - lastDetectionTime > 20) {
+      if (now - lastDetectionTime > 50) { // 20 fps detection - handpose is a bit heavier
         lastDetectionTime = now;
-        if (video.currentTime !== lastVideoTime) {
-          lastVideoTime = video.currentTime;
-          handLandmarker.detectForVideo(video, now, (result) => {
-            processHandResults(result);
-          });
-        }
+        detectHand();
       }
     }
 
@@ -224,48 +254,6 @@
     updateLabels();
     orbitControls.update();
     renderer.render(scene, camera);
-  }
-
-  function processHandResults(results) {
-    console.log('Hasil deteksi:', results);
-
-    if (!results.landmarks || results.landmarks.length === 0) {
-      console.warn("No landmarks detected - pastikan pose sama seperti di demo resmi");
-      isGrabbing = false;
-      return;
-    }
-
-    console.log("Landmarks detected! Score:", results.handednesses?.[0]?.score || 'N/A');
-
-    for (const landmarks of results.landmarks) {
-      drawingUtils.drawLandmarks(landmarks, { color: '#00FF00', lineWidth: 2, radius: 5 });
-      drawingUtils.drawConnectors(landmarks, HandLandmarker.HAND_CONNECTIONS, { color: '#00FF00', lineWidth: 4 });
-    }
-
-    const landmarks = results.landmarks[0];
-    const mcpMiddle = landmarks[9];
-    const thumbTip = landmarks[4];
-    const indexTip = landmarks[8];
-
-    const pinchDist = Math.hypot(
-      thumbTip.x - indexTip.x,
-      thumbTip.y - indexTip.y,
-      thumbTip.z - indexTip.z
-    );
-
-    isGrabbing = pinchDist < 0.15;
-
-    if (isGrabbing && currentMesh) {
-      const x = (mcpMiddle.x - 0.5) * 20;
-      const y = (0.5 - mcpMiddle.y) * 15;
-      const wrist = landmarks[0];
-      const pipMiddle = landmarks[10];
-      const depthDist = Math.hypot(wrist.x - pipMiddle.x, wrist.y - pipMiddle.y);
-      const z = THREE.MathUtils.mapLinear(depthDist, 0, 0.4, 10, -10);
-
-      currentMesh.position.set(x, y, z);
-      currentMesh.rotation.y = (mcpMiddle.x - 0.5) * Math.PI * 2;
-    }
   }
 
   function loadShape(shape) {
@@ -423,12 +411,15 @@
 
     if (handTrackActive) {
       orbitControls.enabled = false;
-      if (!handLandmarker) {
+      if (!handposeModel) {
+        handStatus.textContent = "Memuat model Handpose...";
         try {
-          await createHandLandmarker();
+          handposeModel = await handpose.load();
+          console.log("Handpose model loaded");
+          handStatus.textContent = "Model Handpose siap! Gerakkan tangan telapak terbuka.";
         } catch (err) {
-          console.error("Gagal load model:", err);
-          alert("Gagal memuat model MediaPipe: " + err.message);
+          console.error("Gagal load Handpose:", err);
+          handStatus.textContent = "Gagal memuat model Handpose. Cek koneksi.";
           handTrackActive = false;
           return;
         }
@@ -446,17 +437,12 @@
 
         video.onloadedmetadata = () => {
           video.play().then(() => {
-            console.log("Kamera playing, readyState:", video.readyState);
-            handStatus.textContent = "Kamera aktif - gunakan pose persis seperti di demo resmi!";
+            console.log("Kamera playing");
+            handStatus.textContent = "Kamera aktif - gerakkan tangan telapak terbuka!";
             if (!previewLoopId) {
               previewLoopId = requestAnimationFrame(previewDraw);
             }
           }).catch(err => console.error("Play error:", err));
-        };
-
-        video.onplay = () => {
-          console.log("onplay triggered");
-          if (!previewLoopId) previewLoopId = requestAnimationFrame(previewDraw);
         };
 
       } catch (err) {
